added initial build

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,3 +1,5 @@
-<div class="well">
-    Welcome to Yeoman and Ember.js!
-</div>
+<ul class="search-results artists">
+  {{#each RocknrollcallYeoman.dummySearchResultsArtists}}
+    <li><a href="#">{{name}}</a></li>
+  {{/each}}
+</ul>
